[tool.poetry]
name = "cc-connector-cli"
version = "0.3"
authors = ["Bruno Schilling <Bruno.Schilling@student.htw-berlin.de>", "Christoph Jansen <Christoph.Jansen@htw-berlin.de>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/curious-containers/cc-connector-cli"
homepage = "https://www.curious-containers.cc/"
description = "CC Connector CLI is part of the Curious Containers project."

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]
